Fix CSS so goal no longer overlaps player

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,16 +74,6 @@ html {
     scale: 0.9;
 }
 
-<<<<<<< HEAD
-=======
-html {
-    height:100%;
-    background:orange;
-    box-shadow:inset 0 0 1em black;
-    overflow:hidden;
-}
-
->>>>>>> 54f8158... Fix conflict with presentation CSS
 #display div,
 .obstacle:before,
 .obstacle:after,
@@ -99,6 +89,10 @@ html {
     transform-origin: 97% 97%;
     position: relative;
     box-shadow: .125em .125em .5em rgba(0,0,0,.09);
+}
+
+.goal {
+    background: var(--goal-color) !important;
 }
 
 .obstacle {
@@ -142,8 +136,4 @@ html {
 .player:after {
 transform: rotateY(90deg) translateX(1em);
 box-shadow: inset -.125em 0em .25em rgba(0,0,0,.1);
-}
-
-.goal {
-    background: var(--goal-color) !important;
 }
